--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.10.11",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "passport-vkontakte": "^0.5.0",
     "pug": "^3.0.0",
